# engine

./: .gitignore  CMakeLists.txt  clean_generate.bat  dependencies.cmake  generate.bat  next_steps.txt
editor/: CMakeLists.txt
editor/src/: main.cpp
engine/: CMakeLists.txt
engine/src/: core.cpp  core.hpp
engine/src/engine/: core.cpp
engine/src/engine/game_object/: component.cpp  component.hpp
engine/src/engine/input/: input_manager.cpp  input_manager.hpp
engine/src/engine/transformation/: rotation.cpp  rotation.hpp  transformation.cpp  transformation.hpp  transformation_component.cpp  transformation_component.hpp
engine/src/game_object/: component.cpp  component.hpp  game_object.cpp  game_object.hpp  game_object.inl  game_object_manager.cpp  game_object_manager.hpp
engine/src/input/: input_manager.cpp  input_manager.hpp  key_codes.hpp
engine/src/window/: window.cpp  window.hpp
projects/proof/: CMakeLists.txt
projects/proof/src/: main.cpp
shared/: CMakeLists.txt  logger.cpp  singleton.hpp  singleton.inl
shared/src/shared/: logger.hpp
